k3s-cluster/gitops/infrastructure/monitoring/kube-prometheus-stack/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`grafana.int.edgedatalab.com`)
      kind: Rule
      middlewares:
        - name: forwardauth
          namespace: authelia
      services:
        - name: monitoring-kube-prometheus-stack-grafana
          port: 80
  tls:
    certResolver: letsencrypt
